test_suite/tests/ui/default-attribute/enum.stderr
error: #[serde(default)] can only be used on structs with named fields
  --> $DIR/enum.rs:12:10
   |
12 | #[derive(Deserialize)]
   |          ^^^^^^^^^^^

error: aborting due to previous error

